tests/baselines/reference/anyDeclare.errors.txt
tests/cases/compiler/anyDeclare.ts(4,14): error TS2300: Duplicate identifier 'myFn'.


==== tests/cases/compiler/anyDeclare.ts (1 errors) ====
    declare var x: any;
    module myMod {
        var myFn;
        function myFn() {  }
                 ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.
    }
    